--- a/prepros.cfg
+++ b/prepros.cfg
@@ -685,6 +685,22 @@
             "d833ed77"
           ],
           "type": "jade"
+        },
+        "10c2d553": {
+          "id": "10c2d553",
+          "path": "src/js/angular.min.js",
+          "output": "src/js/angular.min-dist.js",
+          "name": "angular.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
@@ -882,7 +898,14 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "shebang": true,
+              "quote_style": 0
             }
           }
         }
